--- a/Project_html.html
+++ b/Project_html.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project:1</title>
+    <link rel="icon" href="./Assets/download.png">
 </head>
 
 <body style="background-color: rgb(219, 199, 111);">
 
     <center> <img src="./Assets/wild.jpg" height="100px" width="350px"></center>
-    <center>
-        <h1>Information on Leapords</h1>
-    </center>
+    
+    <center><h1>Information on Leapords</h1></center>
 
     <hr><br>
+
 
     <h3> Let's Know More About Big Cats in Details </h3><br>
 
@@ -60,7 +61,7 @@
         the populations of some of the rarest felids. The Amur leopard is certainly one of the rarest cats with no more
         than 90 individuals surviving in the wild in the Russian Far East</p>
 
-        <a href="https://en.wikipedia.org/wiki/Big_cat" target="_blank">For More Details Visit :</a> 
+    <a href="https://en.wikipedia.org/wiki/Big_cat" target="_blank">For More Details Visit :</a>
 
     <hr>
 
@@ -141,7 +142,7 @@
             <label>Address :</label>
             <textarea cols="20" rows="5" placeholder="Address"> </textarea><br><br>
 
-            <label> Visiting Day  :</label>
+            <label> Visiting Day :</label>
             <input type="date"><br><br>
 
 
@@ -149,14 +150,8 @@
 
             <input type="submit">
 
-
         </fieldset>
-
-
     </form>
-
-
-
 
 </body>
 
